# lazybox

./: .gitignore  .travis.yml  Makefile  README.md  azure-pipelines.yml  requirements.txt
.github/workflows/: c-cpp.yml
boxer/: CMakeLists.txt  CmdFileScanner.cpp  ConfigParser.cpp  FileCommon.cpp  LazyBoxCommands.cpp  cmdList.cpp  main.cpp
boxer/include/: CmdFileScanner.hpp  ConfigParser.hpp  FileCommon.hpp  LazyBoxCommands.hpp
common/: CMakeLists.txt  ConfigParser.cpp  FileCommon.cpp  StringCommon.cpp
common/include/: ConfigParser.hpp  StringCommon.hpp
config/: .config  default.cfg  default.config
config/src/: CMakeLists.txt  main.cpp
doc/: moduleData.json  readmeData.json
include/: cmdList.hpp  cmdRegistry.hpp  commands.hpp  echo.hpp  parseArgs.h
script/: genReadme.py  genSymLinks.sh  genUnitTestResults.sh  installCMake.sh  runCPPCheck.sh  runDiffTest.py  runTest.py  runUnityTest.sh  runValgrind.sh
src/: CMakeLists.txt  cmdList.cpp  cmdRegistry.cpp  echo.cpp  main.cpp  parseArgs.c
src/boxer/: CmdFileScanner.cpp  LazyBoxCommands.cpp  main.cpp
src/boxer/include/: CmdFileScanner.hpp  LazyBoxCommands.hpp
src/commands/: CMakeLists.txt  basename.c  cat.cpp  chmod.cpp  cksum.c  date.cpp  echo.c  echo.cpp
src/include/: cmdList.hpp  commands.hpp
test/: CMakeLists.txt
test/commandTests/: CMakeLists.txt  catTest2
test/commandTests/cat/: test3  test4  test5
test/commandTests/cksum/: test1  test2
test/staticanalysis/: CMakeLists.txt
test/symlinkTests/: CMakeLists.txt
test/unittests/: CMakeLists.txt  dummytest.cpp  echo_test.cpp
test/unittests/commands/: date_test.cpp  echo_test.cpp
test/unittests/gtest_cpp/: CMakeLists.txt  cmdRegistry_Test.cpp  fileCommon_Test.cpp  stringCommon_Test.cpp
test/unittests/unity_c/: CMakeLists.txt  CMakeLists.txt.in  main.c  parseArgs_tests.c
